
Version 0.3.7 (8 Jun 2010)
==========================

Enhancements:

New APIS:

  * Context menu callback for trees (Dan Lucraft)

New contributors:



Version 0.3.6 (5 Jun 2010)
==========================

Enhancements:

  * Folders open in the project view on a double click (Nizar Jouini)
  * Drag and drop tabs (Tim Felgentreff)
  * Change font and theme commands (Sam Clopton)
  * Word wrap option (Dan Lucraft)
  * Toggle line numbers (Dan Lucraft)
  * Can put TM themes and bundles into .redcar/{Bundles,Themes} (Dan Lucraft)
  * Home command goes to start of text first then start of line (Dan Lucraft)
  * The project view has a fixed width that doesn't change if you resize the main window (Tim Felgentreff)
  * Optional margin that colours text differently past a configurable column. (Dan Lucraft)
  * Experimental app bundle for Mac OSX. (Tim Felgentreff)
  * Moved to JRuby 1.5 (Dan Lucraft)
  * Opens content from standard in (Dan Lucraft)
  * Dev versions of Redcar have a blue icon (Dan Lucraft)

New APIs:

  * Annotations column (Dan Lucraft)
  * Open popup menu and tooltips at cursor/pointer locations (Dan Lucraft)
  
New contributors:

  * Nizar Jouini

Version 0.3.5dev (1 May 2010)
=============================

Enhancements:
  
  * Jump to declaration support for Ruby and Java
  * Double click respects word boundaries
  * Window title reflects project name
  * Duplicate region command
  * Switch tab with Alt-1, Alt-2 (or Cmd-1, Cmd-2 on OSX)
  * Prompts to save modified tabs on tab, window or application close
  * Snippet menus show tab trigger more nicely (linux/windows)
  * Watches to changes to open files, and prompts to revert
  * Project view sorts directories before files (by popular request!)
  * Shows menu bar on OSX when there are no windows open
  * Halve startup time from 0.3.4 (warm startup)
  * Added background Task APIs.
  * Task Manager
  * Added ProjectRefresh Task API
  * No longer dumps command errors to the console